A little bit of styling

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             </div>
         </div>
     </div>
+    <footer>What's the weather like? Well lets find out!</footer>
+
     
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
