spans are now buttons

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <input type="text">
                 <button type="submit">Search</button>
                 <div id="history" class="card">
-                    <span class="card-body">These will be generated in the javascript</span>
-                    <span class="card-body">For each time the search button is pressed</span>
-                    <span class="card-body">It will create a span with the city name you searched</span>
+                    <button class="card-body">These will be generated in the javascript</button>
+                    <button class="card-body">For each time the search button is pressed</button>
+                    <button class="card-body">It will create a button with the city name you searched</button>
                 </div>
             </div>
             <div id="weather-information" class="col-8">
