--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
                 <input type="text">
                 <button id="searchBtn" type="submit">Search</button>
                 <div id="history" class="card">
-                    <button class="card-body">These will be generated in the javascript</button>
-                    <button class="card-body">For each time the search button is pressed</button>
-                    <button class="card-body">It will create a button with the city name you searched</button>
+                    <button class="card-body">This will be a generated button with the card-body class, and will be the recent search, so you can click it and get that data again</button>
                 </div>
             </div>
             <div id="weather-information" class="col-8">
@@ -42,6 +40,7 @@
     
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="assets/javascript.js"></script>
 </body>
 </html>
