working layout for forecast

--- a/index.html
+++ b/index.html
@@ -29,8 +29,24 @@
                     <p id="UVIdx" class="card-body">UV index</p>
                 </div>
                 <div id="forecast" class="card col-12">
-                    <h3>5-Day Forecast:</h3>
-                    <span id="5DayForecast" class="card-body">This is where the 5 day forecast will be generated</span>
+                    <div class="row">
+                        <h3 class="col-12">5-Day Forecast:</h3>
+                        <div class="card col-2">
+                            <p>Date&Icon</p>
+                            <p>Temp</p>
+                            <p>Humidity</p>
+                        </div>
+                        <div class="card col-2">
+                            <p>Date&Icon</p>
+                            <p>Temp</p>
+                            <p>Humidity</p>
+                        </div>
+                        <div class="card col-2">
+                            <p>Date&Icon</p>
+                            <p>Temp</p>
+                            <p>Humidity</p>
+                        </div>
+                    </div>    
                 </div>
             </div>
         </div>
