very happy with forecast card positioning

--- a/index.html
+++ b/index.html
@@ -28,9 +28,22 @@
                     <p id="windSpeed" class="card-body">wind speed</p>
                     <p id="UVIdx" class="card-body">UV index</p>
                 </div>
-                <div id="forecast" class="card col-12">
-                    <div class="row">
+                <div class="card col-12">
+                    <div id="forecast" class="row">
                         <h3 class="col-12">5-Day Forecast:</h3>
+                        <div class="col-1">
+
+                        </div>
+                        <div class="card col-2">
+                            <p>Date&Icon</p>
+                            <p>Temp</p>
+                            <p>Humidity</p>
+                        </div>
+                        <div class="card col-2">
+                            <p>Date&Icon</p>
+                            <p>Temp</p>
+                            <p>Humidity</p>
+                        </div>
                         <div class="card col-2">
                             <p>Date&Icon</p>
                             <p>Temp</p>
