--- a/index.html
+++ b/index.html
@@ -23,42 +23,15 @@
             <div id="weather-information" class="col-8">
                 <div class="card col-12">
                     <h2 class="card-header">This will have the city name and date, and will be randomly generated</h2>
-                    <p id="temperature" class="card-body">temperature</p>
-                    <p id="humidity" class="card-body">humidity</p>
-                    <p id="windSpeed" class="card-body">wind speed</p>
-                    <p id="UVIdx" class="card-body">UV index</p>
+                    <p id="temperature" class="card-body"></p>
+                    <p id="humidity" class="card-body"></p>
+                    <p id="windSpeed" class="card-body"></p>
+                    <p id="UVIdx" class="card-body"></p>
                 </div>
                 <div class="card col-12">
                     <div id="forecast" class="row">
                         <h3 class="col-12">5-Day Forecast:</h3>
-                        <div class="col-1">
-
-                        </div>
-                        <div class="card col-2">
-                            <p>Date&Icon</p>
-                            <p>Temp</p>
-                            <p>Humidity</p>
-                        </div>
-                        <div class="card col-2">
-                            <p>Date&Icon</p>
-                            <p>Temp</p>
-                            <p>Humidity</p>
-                        </div>
-                        <div class="card col-2">
-                            <p>Date&Icon</p>
-                            <p>Temp</p>
-                            <p>Humidity</p>
-                        </div>
-                        <div class="card col-2">
-                            <p>Date&Icon</p>
-                            <p>Temp</p>
-                            <p>Humidity</p>
-                        </div>
-                        <div class="card col-2">
-                            <p>Date&Icon</p>
-                            <p>Temp</p>
-                            <p>Humidity</p>
-                        </div>
+                        <div class="col-1"></div>
                     </div>    
                 </div>
             </div>
