styling and repeatablity

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="card col-12">
                     <div id="forecast" class="row">
                         <h3 class="col-12">5-Day Forecast:</h3>
-                        <div class="col-1"></div>
+                        <!-- <div class="col-1"></div> -->
                     </div>    
                 </div>
             </div>
