--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div id="weather-information" class="col-8">
                 <div class="card col-12">
-                    <h2 class="card-header">This will have the city name and date, and will be randomly generated</h2>
+                    <h2 class="card-header"></h2>
                     <p id="temperature" class="card-body"></p>
                     <p id="humidity" class="card-body"></p>
                     <p id="windSpeed" class="card-body"></p>
